add global exception handling mechanism